# daily-research-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
configs/: agent.example.toml  agent.toml
docs/: design.md  requirements.md  x_oauth_cli.md
docs/archives/: deepagents_refactor_plan.md
docs/deepagents/: agent-skills.md  backends.md  harness.md  human-in-the-loop.md  long-term-memory.md  middleware.md  overview.md  quickstart.md  subagents.md
src/daily_research_agent/: __init__.py  audit.py  cli.py  config.py  logging.py  orchestrator.py  prompting.py  tool_limits.py
src/daily_research_agent/artifacts/: __init__.py  paths.py  writer.py
src/daily_research_agent/domain/: __init__.py  models.py  prompts.py
src/daily_research_agent/integrations/: __init__.py  mcp_client.py  x_bookmarks.py
src/daily_research_agent/tools/: __init__.py  x_oauth.py
templates/: article_default.toml
